--- a/app/client/main.html
+++ b/app/client/main.html
@@ -2,7 +2,8 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>meteor-application-template</title>
+  <title>jQueryDemo</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
